--- a/ballots/2.0.0_STU2-ballot.md
+++ b/ballots/2.0.0_STU2-ballot.md
@@ -1,1 +1,20 @@
+# Resolution Desk Ballot CH LAB-Order STU 2
+
+## General information
+The Ballot STU 2 took place from August 8 to September 30. From September 11 to
+September 15, a Projectathon was organized to test CH LAB-Order and provide feedback on the exchange format.
+During the Ballot 10 issues were reported for CH ORF:
+* [Issues CH LAB-Order (Label STU 2 Ballot)](https://github.com/hl7ch/ch-lab-order/issues?q=is%3Aissue+is%3Aopen+label%3A%22STU+2+Ballot%22)
+
+## Profiling
+
+
+## Terminology
+
+
+## Documentation
+
+
+## Typos
+
 
