--- a/ballots/2.0.0_STU2-ballot.md
+++ b/ballots/2.0.0_STU2-ballot.md
@@ -3,18 +3,130 @@
 ## General information
 The Ballot STU 2 took place from August 8 to September 30. From September 11 to
 September 15, a Projectathon was organized to test CH LAB-Order and provide feedback on the exchange format.
-During the Ballot 10 issues were reported for CH ORF:
+During the Ballot 10 issues were reported for CH LAB-Order:
 * [Issues CH LAB-Order (Label STU 2 Ballot)](https://github.com/hl7ch/ch-lab-order/issues?q=is%3Aissue+is%3Aopen+label%3A%22STU+2+Ballot%22)
 
 ## Profiling
-
-
-## Terminology
-
+* [#277](https://github.com/hl7ch/ch-lab-order/issues/277) Management Summary Change
 
 ## Documentation
+* [#280](https://github.com/hl7ch/ch-lab-order/issues/280) FHIR IGs must not have a TODO to be eligible for FMM Level 3
+* [#276](https://github.com/hl7ch/ch-lab-order/issues/276) Ordering of Containers, Blood Pressure instruments should not be covered by lab order
+ 
+## Examples
+* [#282](https://github.com/hl7ch/ch-lab-order/issues/282) Examples needed that indicate request of analyses and linked information
 
+## Use Cases
+* [#279](https://github.com/hl7ch/ch-lab-order/issues/279) Use Cases in German: use case 10 a specialised case of use case 2?
+* [#281](https://github.com/hl7ch/ch-lab-order/issues/281) Use Cases in German: Profile for use case 2?
+* [#278](https://github.com/hl7ch/ch-lab-order/issues/278) Mismatch between use case 2 in English and in German
 
 ## Typos
+* [#275](https://github.com/hl7ch/ch-lab-order/issues/275) Home: Typos
+* [#274](https://github.com/hl7ch/ch-lab-order/issues/274) CH LAB-ORDER Document Profile: Spelling
 
+## Broken Links
+ * [#272](https://github.com/hl7ch/ch-lab-order/issues/272) Case Studies in German
+    
+## Negative comments
 
+2 reasons for rejection:
+
+Reason 1:
+The balloted version of the CH LAB-Order IG combines two very different use scenarios for laboratory orders in the use case descriptions, but deals exclusively with one of these use scenarios in the introductory page of the IG and excludes the other use scenario in the introductory page of the IG in contradiction to the use case descriptions.
+Detailed description: The introductory page of the IG ("Home"; http://fhir.ch/ig/ch-lab-order/index.html) describes only the laboratory orders with the use of Questionnaire and QuestionnaireResponse (namely under 1.1: "This is HL7 Swiss FHIR implementation guide for Laboratory Orders, which is based on CH ORF (R4), *Order & Referral by Form* - Implementation Guide http://fhir.ch/ig/ch-orf/index.html, [...]"; under 1.2: "Applications claiming for conformance with the CH LAB-Order Implementation Guide shall: *render* (and in case of the Questionnaire filler allow for data entry) *all elements of a questionnaire* in the user interface [...]"; under 1.3: "[...] the laboratories provide *forms* that meet the following requirements: [...]").
+
+Reason 2:
+(https://github.com/hl7ch/ch-lab-order/issues/280) According to the HL7 FHIR Conformance Criteria, FHIR IGs must not have a TODO to be eligible for FHIR maturity mode level 3 (FMM level 3; see: https://confluence.hl7.org/display/FHIR/Conformance+QA+Criteria, 1st paragraph and https://confluence.hl7.org/display/FHIR/Conformance+QA+Criteria#ConformanceQACriteria-Behavior-ImplementationGuide).
+I assume that it is intended that the present ballot will raise the CH LAB order IG from version 2.0.0 to version 3.0.0. I furthermore assume that this corresponds to raising the IG from FMM level 2 to FMM level 3).
+Therefore, all the TODOs listed in this IG must have been implemented before the balloted IG is eligible for FMM level 3 (2 TODOs on this page).
+
+Suggested improvement for rejection reason 1:
+The two different use scenarios for lab orders are to be defined in a separate IG each:
+
+A: Use scenario "Laboratory orders *with* use of Questionnaire and QuestionnaireResponse":
+- Corresponds to the currently balloted CH LAB-Order, but with the following changes:
+   - It should now be clearly stated on the introductory page that laboratory orders without the use of Questionnaire and QuestionnaireResponse are not part of this IG.
+   - The IG shall be renamed from "CH LAB-Order" to "CH LAB-Order by Form" or to "CH LAB-Order with Questionnaires". Its URL shall be renamed according to its new name.
+   - Use case 2 is removed.
+
+B: Use case "Laboratory orders *without* using Questionnaire and QuestionnaireResponse":
+- Corresponds to the previous Use case 2 of the balloted IG, but:
+   - Should define this use case more precisely.
+   - Should be extended to include own profiles and description of their dependencies.
+   - Should receive example instances.
+- This IG is given the name "CH LAB Order" and the URL http://fhir.ch/ig/ch-lab-order/.
+- It should be checked whether existing international IGs already cover this use case (most likely those of the HL7 International Work Group "Orders and Observations" (https://confluence.hl7.org/display/OO)) and whether these IGs can be used unchanged in CH or whether they have to be specialised for CH.
+
+Suggested improvement for rejection reason 2:
+Implement or resolve all TODOs listed in this IG.
+***
+Criteria 1:
+Change the Purpose of CH LAB Order. CH LAB Order must define UseCases that base or support the process of a fully electronic order of analyses in a laboratory. (eg no media break, no relabelling of samples)
+
+http://fhir.ch/ig/ch-lab-order/index.html#hl7-swiss-fhir-implementation-guide-for-generic-laboratory-order-forms
+
+http://fhir.ch/ig/ch-lab-order/index.html#foundation
+
+https://build.fhir.org/ig/hl7ch/ch-lab-order/index.html#management-summary
+
+20230928: https://build.fhir.org/ig/hl7ch/ch-lab-order/index.html#management-summary
+
+Customers of laboratories want to create their orders as efficiently and correctly as possible with the help of order forms. For this purpose, the laboratories provide forms that meet the following requirements:
+
+The form should be able to be processed in their own informatics system (practice system, clinic system).
+
+Pre-filled fields with information about the client, the patient, the commissioned laboratory, should facilitate the order process.
+
+A Catalog (StructureDefinition Catalog) with the references of the examinations (Reference CatalogEntry) offered by the laboratory may be available. In order for the customer to be able to orientate himself in the abundance of possible examinations, it may be possible to search within laboratory specialties (Laboratory Order Panels). This part of the ordering process is here out of scope.
+
+Sample properties (specimen), type of sample, vessel, etc., preanalytical specifications must be specified, and the customer must be able to provide additional information (e.g. oxygen flow rate, time of last meal, 24 h urine volume,). Parts of these informations can also be provided in a Catalog.
+
+The order document should also cover other use cases. For example, a subsequent prescription of analyses on the same sample is foreseen, a common use case. It is also envisaged that the laboratory physician can make suggestions to the client for useful additional examinations, based on the original order.
+
+Efficient commissioning places high demands on the standardisation and interoperability of data processing. The information systems of the client and the laboratory are involved. Likewise, the documents created should contain the required metadata for the EPD (Electronic Patient Dossier), and at the same time they can provide the metadata for the resulting diagnosis report.
+
+Data exchange with different information systems (practice, hospital, laboratory) quickly becomes confusing due to proprietary solutions (n:m cardinality). Therefore, the question arises whether a standardised order system is not the more favourable solution in the long run.
+
+The proposed solution consists of independent modules and can therefore be quickly adapted to new requirements. Thus, the laboratories can adapt their order panels and examinations in their catalogues as needed, as well as the structured data entry for additional information. "
+
+Proposal of a Rewording of each topic on https://build.fhir.org/ig/hl7ch/ch-lab-order/index.html#management-summary
+
+The lab-order should define the structure of the lab-order so it can be used by different laboratories and different providers of PIS, KIS or independent tool.
+1. the partly or fully filled electronic order should be safeble in the order filler system, so it can be changed until the samples are scanned by the receiver laboratory
+2. practitionar, patient and treatment information should be transferable to the electronic order
+3. in the electronic order all available analyses should be presentable. a search option should be available. The content of profiles should be visible. 
+3a. in the electronic order analyses and profiles should be part of the order. Profiles eg for "blood count" are usually requested as profiles, the profiles are split to single analyses in the LIS (Laboratory Information System)
+4. Analyses, Sample type, required Sample additiv and preanalytic handling should be presented
+4a. Information for the sample taking should be available for the person preparing the taking of blood
+4b. A numbering system should be supported, so that relabeling at the laboratory can be limmited (eg. practitionar number + number-range)
+5. The electronic order should be able to handle the request of analyses for samples that were sent at an earlier point of time.
+6. The electronic order should receive updates on the process of the laboratory analyses: as sample received in laboratory, first results available, report finished.
+6a. The status of the order at the practitionor site should be supported as well: new order, replaced order (enhanced or partly deleted), printed sample lables, documentation of blood take (additional Information as urine volume and Date and Time of withdrawl of blood)
+7. (delete)
+
+Criteria 2. 
+Examples needed that indicate request of analyses and linked information
+
+Examples needed that show full order and how the information as diagnoses, medication ist linked with the service requests
+
+Examples should be named referring to usecases
+current "ch lab order" indication single service requests and a possible implementation of profiles (crea clearance)
+Accessing Profil which indicates a specific implementation Elektrolyte, Creaclearance  does not work 
+http://fhir.ch/ig/ch-lab-order/lab-compendium/PlanDefinition/Creatinine-Clearance
+
+Experience with HL7 V2 shows that many interpretations are possible to send orders. 
+
+Therefore best practicie examples should be shown in the ch-lab-order to facilitate a common implementation of all software providers. 
+
+Missing examples in ch-lab order: 
+
+the following illustration is not a validated example, but shows a graphic that can be easilly understood by everyone who already implemented electronic lab orders.
+
+: green: Example for a request of a coagulation analysis. The PIS needs information about preanalytic condition for label printing and for the taking and storing of the blood sample. 
+: blue: The Laboratory needs specific information about the medication of the patient. Additionally information could be indicated as mandatory or favored.
+
+All information that is necessary for a correct analytic with indicating the dedicated reference range of the analyses must be part of an order and therefore represantable in the the ch-lab-order.
+ (how can an illustration be provided?)
+
+ ![image](https://github.com/hl7ch/ch-lab-order/assets/87263053/87806a94-ee12-4ca9-ada1-45d45a3f6762)
