spelling CH LAB-Order fixed

--- a/ballots/2.0.0_STU2-ballot.md
+++ b/ballots/2.0.0_STU2-ballot.md
@@ -23,7 +23,7 @@ During the Ballot 10 issues were reported for CH LAB-Order:
 
 ## Typos
 * [#275](https://github.com/hl7ch/ch-lab-order/issues/275) Home: Typos
-* [#274](https://github.com/hl7ch/ch-lab-order/issues/274) CH LAB-ORDER Document Profile: Spelling
+* [#274](https://github.com/hl7ch/ch-lab-order/issues/274) CH LAB-Order Document Profile: Spelling
 
 ## Broken Links
  * [#272](https://github.com/hl7ch/ch-lab-order/issues/272) Case Studies in German
