typos, unify quotationmarks for codes

--- a/ballots/2.0.0_STU2-ballot.md
+++ b/ballots/2.0.0_STU2-ballot.md
@@ -93,7 +93,7 @@ The proposed solution consists of independent modules and can therefore be quick
 Proposal of a Rewording of each topic on https://build.fhir.org/ig/hl7ch/ch-lab-order/index.html#management-summary
 
 The lab-order should define the structure of the lab-order so it can be used by different laboratories and different providers of PIS, KIS or independent tool.
-1. the partly or fully filled electronic order should be safeble in the order filler system, so it can be changed until the samples are scanned by the receiver laboratory
+1. the partly or fully filled electronic order should be saveble in the order filler system, so it can be changed until the samples are scanned by the receiver laboratory
 2. practitionar, patient and treatment information should be transferable to the electronic order
 3. in the electronic order all available analyses should be presentable. a search option should be available. The content of profiles should be visible. 
 3a. in the electronic order analyses and profiles should be part of the order. Profiles eg for "blood count" are usually requested as profiles, the profiles are split to single analyses in the LIS (Laboratory Information System)
