--- a/ballots/3.0.0_STU3-ballot.md
+++ b/ballots/3.0.0_STU3-ballot.md
@@ -8,6 +8,8 @@ During the ballot, 6 issues were reported for CH LAB-Order:
 * [Issues CH LAB-Order](https://github.com/hl7ch/ch-lab-order/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22STU%203%20Ballot%22)
 
 ## Profiling
+* [Issues 372](https://github.com/hl7ch/ch-lab-order/issues/372): Home - Use ServiceRequest and Task as the fundamental set of resources to satisfy the core requirements in Section 1.3
+* [Issues 371](https://github.com/hl7ch/ch-lab-order/issues/371): The implementation guide gives an impression that lab orders are a one-time event. In practice there are further steps expected beyond the initial order creation and communication.
 * [Issues 366](https://github.com/hl7ch/ch-lab-order/issues/366): Home: link to ci build
 
 ## Documentation (profiles/texts/examples)
