finalization resolution desk

--- a/ballots/3.0.0_STU3-ballot.md
+++ b/ballots/3.0.0_STU3-ballot.md
@@ -4,13 +4,14 @@
 The STU3 ballot was held from August 4 to September 30. From September 16 to 18, 
 the annual Projectathon took place, where there was the opportunity to test the 
 Laboratory Order exchange format and provide feedback.   
-During the ballot, 6 issues were reported for CH LAB-Order:
+During the ballot, 20 issues were reported for CH LAB-Order:
 * [Issues CH LAB-Order](https://github.com/hl7ch/ch-lab-order/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22STU%203%20Ballot%22)
 
 ## Profiling
-* [Issues 372](https://github.com/hl7ch/ch-lab-order/issues/372): Home - Use ServiceRequest and Task as the fundamental set of resources to satisfy the core requirements in Section 1.3
-* [Issues 371](https://github.com/hl7ch/ch-lab-order/issues/371): The implementation guide gives an impression that lab orders are a one-time event. In practice there are further steps expected beyond the initial order creation and communication.
+
 * [Issues 366](https://github.com/hl7ch/ch-lab-order/issues/366): Home: link to ci build
+* [Issues 376](https://github.com/hl7ch/ch-lab-order/issues/376): CH LAB-Order Document with Service Request
+* [Issues 382](https://github.com/hl7ch/ch-lab-order/issues/382): SepsisWorkup - JSON Representation - Removed contained Provenance resource
 
 ## Documentation (profiles/texts/examples)
 * [Issues 362](https://github.com/hl7ch/ch-lab-order/issues/362): Changelog
@@ -18,4 +19,19 @@ During the ballot, 6 issues were reported for CH LAB-Order:
 * [Issues 367](https://github.com/hl7ch/ch-lab-order/issues/367): Home: Six Case studies with examples for the Order Document
 * [Issues 365](https://github.com/hl7ch/ch-lab-order/issues/365): Home: unify spelling 
 * [Issues 364](https://github.com/hl7ch/ch-lab-order/issues/364): Home: Outdated link
+* [Issues 373](https://github.com/hl7ch/ch-lab-order/issues/373): Changelog - Missing Issue links
+* [Issues 374](https://github.com/hl7ch/ch-lab-order/issues/374): Home - Six Case studies with examples for the Order Document
+* [Issues 375](https://github.com/hl7ch/ch-lab-order/issues/375): Changelog - Missing STU 3 Ballot Section
+
  
+## Negative comments
+ * [Issues 371](https://github.com/hl7ch/ch-lab-order/issues/371): The implementation guide gives an impression that lab orders are a one-time event. In practice there are further steps expected beyond the initial order creation and communication.
+ * [Issues 372](https://github.com/hl7ch/ch-lab-order/issues/372): Home - Use ServiceRequest and Task as the fundamental set of resources to satisfy the core requirements in Section 1.3
+* [Issues 377](https://github.com/hl7ch/ch-lab-order/issues/377): Use Cases in English - Use Case 1 - What is the exchange mechanism for lab orders?
+* [Issues 378](https://github.com/hl7ch/ch-lab-order/issues/378): Use Cases in English - Use Case 4 - Unclear how the order Document can be modified
+* [Issues 379](https://github.com/hl7ch/ch-lab-order/issues/379): Use Cases in English - Add Examples of Exception or Error Workflows
+* [Issues 380](https://github.com/hl7ch/ch-lab-order/issues/380): Use Cases in English - Use Case 5 - Include references to all specifications in the use case
+* [Issues 381](https://github.com/hl7ch/ch-lab-order/issues/381): Use Cases in English - Use Case 5 - Recommend having client-based test compendiums
+* [Issues 383](https://github.com/hl7ch/ch-lab-order/issues/383): Case Studies in English - Case Study 4 - Describe Creation and Resulting of Reflex Orders
+* [Issues 384](https://github.com/hl7ch/ch-lab-order/issues/384): Artifacts Summary - Clarify references to other structure in Example
+* [Issues 385](https://github.com/hl7ch/ch-lab-order/issues/385): Artifacts Summary - Remove or Re-state examples that reference unpublished Order Catalog IG
