--- a/ballots/3.0.0_STU3-ballot.md
+++ b/ballots/3.0.0_STU3-ballot.md
@@ -4,7 +4,7 @@
 The STU3 ballot was held from August 4 to September 30. From September 16 to 18, 
 the annual Projectathon took place, where there was the opportunity to test the 
 Laboratory Order exchange format and provide feedback.   
-During the ballot, 20 issues were reported for CH LAB-Order:
+During the ballot, 21 issues were reported for CH LAB-Order:
 * [Issues CH LAB-Order](https://github.com/hl7ch/ch-lab-order/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22STU%203%20Ballot%22)
 
 ## Profiling
@@ -12,6 +12,7 @@ During the ballot, 20 issues were reported for CH LAB-Order:
 * [Issues 366](https://github.com/hl7ch/ch-lab-order/issues/366): Home: link to ci build
 * [Issues 376](https://github.com/hl7ch/ch-lab-order/issues/376): CH LAB-Order Document with Service Request
 * [Issues 382](https://github.com/hl7ch/ch-lab-order/issues/382): SepsisWorkup - JSON Representation - Removed contained Provenance resource
+* [Issues 386](https://github.com/hl7ch/ch-lab-order/issues/386): ActivityDefinition
 
 ## Documentation (profiles/texts/examples)
 * [Issues 362](https://github.com/hl7ch/ch-lab-order/issues/362): Changelog
